gh-4365 Tidy up QueryField constants